--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -4,12 +4,11 @@ on: push
 
 jobs:
   release:
+    if: ${{ startsWith(github.ref, 'refs/tags/v') }}
     runs-on: ${{ matrix.os }}
-
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
-
     steps:
     - uses: actions/checkout@v3
 
@@ -18,9 +17,14 @@ jobs:
       with:
         node-version: 18.x
         
+    - name: NPM Install
+      run: npm install
+        
+    - name: Build Webpack
+      run: npm run build-render:prod
+        
     - name: Build Electron app
-      uses: tjmcraft/action-electron-builder@v1.0.1
+      uses: tjmcraft/action-electron-builder@latest
       with:
         gh_token: ${{ secrets.gh_token }}
-        build_script_name: build-render:prod
-        release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+        release: ${{ true }}
