--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -1,9 +1,6 @@
-name: Build Electron
+name: Build Electron Release
 
-on:
-  push:
-    tags:
-      - v*
+on: workflow_dispatch
 
 jobs:
   release:
