--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -27,3 +27,5 @@ jobs:
       with:
         gh_token: ${{ secrets.gh_token }}
         release: ${{ true }}
+        mac_cert: ${{ secrets.mac_certs }}
+        mac_cert_password: ${{ secrets.mac_certs_password }}
