--- a/src/render/.eslintrc.json
+++ b/src/render/.eslintrc.json
@@ -8,6 +8,7 @@
         "preact"
         // "plugin:react/recommended"
     ],
+    "ignorePatterns": ["dist/*"],
     "globals": {
         "window": true
     },
