--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -30,3 +30,4 @@ jobs:
           mac_cert: ${{ secrets.mac_certs }}
           mac_cert_password: ${{ secrets.mac_certs_password }}
           windows_cert: ${{ secrets.win_certs }}
+          windows_cert_password: ${{ secrets.win_certs_password }}
