--- a/.github/workflows/npm_version.yml
+++ b/.github/workflows/npm_version.yml
@@ -14,6 +14,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        persist-credentials: false
 
     - name: Setup Node.js
       uses: actions/setup-node@v3
