--- a/.github/workflows/npm_version.yml
+++ b/.github/workflows/npm_version.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
-        persist-credentials: false
+        persist-credentials: true
 
     - name: Setup Node.js
       uses: actions/setup-node@v3
@@ -26,4 +26,4 @@ jobs:
       run: npm version ${{ github.event.inputs.newversion }}
 
     - name: Commit
-      run: git push "https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}" "${{ github.head_ref }}"
+      run: git push 
