--- a/.github/workflows/npm_version.yml
+++ b/.github/workflows/npm_version.yml
@@ -16,6 +16,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         persist-credentials: true
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Setup Node.js
       uses: actions/setup-node@v3
