--- a/.github/workflows/npm_version.yml
+++ b/.github/workflows/npm_version.yml
@@ -16,7 +16,6 @@ jobs:
     - uses: actions/checkout@v3
       with:
         persist-credentials: true
-        token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Setup Node.js
       uses: actions/setup-node@v3
@@ -25,8 +24,8 @@ jobs:
         
     - name: Setup Vals
       run: |
-        git config --global user.email "makandjo@outlook.com"
-        git config --global user.name "MakAndJo"
+        git config --global user.email "max@tjmc.ru"
+        git config --global user.name "GitHub Actions"
 
     - name: Patch
       run: npm version ${{ github.event.inputs.newversion }}
