--- a/.github/workflows/npm_version.yml
+++ b/.github/workflows/npm_version.yml
@@ -1,34 +1,34 @@
 name: NPM Version Patch
 
-on: 
+on:
   workflow_dispatch:
     inputs:
-          newversion:
-            description: 'Semantic Version Bump Type (major minor patch)'
-            required: true
-            default: 'patch'
+      newversion:
+        description: "Semantic Version Bump Type (major minor patch)"
+        required: true
+        default: "patch"
 
 jobs:
   version:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-      with:
-        persist-credentials: true
+      - uses: actions/checkout@v3
+        with:
+          persist-credentials: true
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: 18.x
-        
-    - name: Setup Vals
-      run: |
-        git config --global user.email "max@tjmc.ru"
-        git config --global user.name "GitHub Actions"
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
 
-    - name: Patch
-      run: npm version ${{ github.event.inputs.newversion }}
+      - name: Setup Vals
+        run: |
+          git config --global user.email "max@tjmc.ru"
+          git config --global user.name "GitHub Actions"
 
-    - name: Commit
-      run: git push --force
+      - name: Patch
+        run: npm version ${{ github.event.inputs.newversion }}
+
+      - name: Commit
+        run: git push --force
