--- a/package.json
+++ b/package.json
@@ -50,7 +50,11 @@
   "devDependencies": {
     "@babel/cli": "^7.15.7",
     "@babel/core": "^7.14.8",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/plugin-transform-react-jsx": "^7.14.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
     "@svgr/webpack": "^6.2.1",
     "@tjmcraft/greentree": "^0.0.67",
     "babel-loader": "^8.2.2",
@@ -83,6 +87,7 @@
     "svg-inline-loader": "^0.8.2",
     "svg-url-loader": "^7.1.1",
     "terser-webpack-plugin": "^5.2.4",
+    "typescript": "^5.1.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
