--- a/src/render/.babelrc
+++ b/src/render/.babelrc
@@ -1,9 +1,16 @@
 {
+  "presets": [
+    "@babel/preset-env",
+    "@babel/preset-typescript"
+  ],
   "plugins": [
-    ["@babel/plugin-transform-react-jsx", {
-      "pragma": "createElement",
-      "pragmaFrag": "Fragment"
-    }]
+    [
+      "@babel/plugin-transform-react-jsx",
+      {
+        "pragma": "createElement",
+        "pragmaFrag": "Fragment"
+      }
+    ]
   ],
   "comments": false
 }
