--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -16,6 +16,10 @@ jobs:
       - name: Install Snapcraft
         uses: samuelmeuli/action-snapcraft@v2
         if: startsWith(matrix.os, 'ubuntu')
+        
+      - name: Install Libsecret
+        if: startsWith(matrix.os, 'ubuntu')
+        run: sudo apt-get install -y libsecret-1-dev
 
       - name: Use Node.js Setup
         uses: actions/setup-node@v3
