--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@babel/plugin-transform-react-jsx": "^7.14.5",
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
+    "@prefresh/webpack": "^4.0.0",
     "@svgr/webpack": "^6.2.1",
     "@tjmcraft/greentree": "^0.0.67",
     "babel-loader": "^8.2.2",
@@ -66,6 +67,7 @@
     "css-loader": "^6.3.0",
     "electron": "^23.1.4",
     "electron-builder": "^24.0.0",
+    "electron-reload": "^2.0.0-alpha.1",
     "eslint": "^8.32.0",
     "eslint-config-preact": "^1.3.0",
     "eslint-plugin-react": "^7.32.2",
@@ -91,6 +93,7 @@
     "url-loader": "^4.1.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.15.1",
     "webpack-plugin-buildinfo": "^0.3.1"
   },
   "build": {
