--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "svg-inline-loader": "^0.8.2",
     "svg-url-loader": "^7.1.1",
     "terser-webpack-plugin": "^5.2.4",
+    "ts-loader": "^9.4.3",
     "typescript": "^5.1.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.75.0",
