--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@prefresh/webpack": "^4.0.0",
     "@svgr/webpack": "^6.2.1",
     "@tjmcraft/greentree": "^0.0.67",
+    "@types/webpack-env": "^1.18.1",
     "babel-loader": "^8.2.2",
     "body-parser": "^1.20.0",
     "compression": "^1.7.4",
