--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,14 +6,19 @@
         "похуй",
         "прелоадер",
         "asar",
+        "GSTATE",
+        "gstore",
         "icns",
         "keytar",
         "loggerutil",
         "msort",
         "natsort",
+        "noopener",
         "nsis",
+        "pctx",
         "prefresh",
-        "realname"
+        "realname",
+        "scroller"
     ],
     "cSpell.language": "en,ru",
     "cSpell.ignoreWords": [
