--- a/src/render/jsconfig.json
+++ b/src/render/jsconfig.json
@@ -24,8 +24,9 @@
             "Store/*": ["Store/*"],
             "SVG/*": ["assets/svg/*"],
             "IMG/*": ["assets/images/*"],
-            "CSS/*": ["./assets/css/*"],
+            "CSS/*": ["assets/css/*"],
             "UI/*": ["ui/*"],
+            "Components/*": ["components/*"],
             "Model/*": ["Model/*"],
             "Hooks/*": ["hooks/*"],
             "react": ["preact/compat"],
