--- a/src/render/tsconfig.json
+++ b/src/render/tsconfig.json
@@ -28,8 +28,9 @@
             "Store/*": ["Store/*"],
             "SVG/*": ["assets/svg/*"],
             "IMG/*": ["assets/images/*"],
-            "CSS/*": ["./assets/css/*"],
+            "CSS/*": ["assets/css/*"],
             "UI/*": ["ui/*"],
+            "Components/*": ["components/*"],
             "Model/*": ["Model/*"],
             "Hooks/*": ["hooks/*"],
             "react": ["./node_modules/preact/compat/"],
