--- a/src/render/tsconfig.json
+++ b/src/render/tsconfig.json
@@ -16,8 +16,8 @@
         "baseUrl": "./",
         "skipLibCheck": true,
         "strict": false,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
+        "noUnusedLocals": false,
+        "noUnusedParameters": false,
         "allowJs": true,
         "lib": [
             "DOM", "DOM.Iterable", "ES2019"
