--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,20 @@
 {
+    "settings": {
+        "react": {
+            "version": "16.4"
+        }
+    },
     "env": {
         "browser": true,
         "es2021": true
     },
     "extends": [
         "eslint:recommended",
-        "preact"
-        // "plugin:react/recommended"
+        "plugin:react/recommended"
     ],
     "ignorePatterns": [
-        "dist/*",
+        "src/main/*",
+        "*/**/dist/*",
         "*-test.ts",
         "*-test.tsx"
     ],
@@ -31,7 +36,7 @@
         ],
         "semi": "warn",
         "no-implicit-coercion": "error",
-        "react-hooks/exhaustive-deps": "error",
+        // "react-hooks/exhaustive-deps": "error",
         "arrow-body-style": "off",
         "no-else-return": "off",
         "no-plusplus": "off",
