--- a/src/render/.eslintrc.json
+++ b/src/render/.eslintrc.json
@@ -13,7 +13,7 @@
         "plugin:react/recommended"
     ],
     "ignorePatterns": [
-        "*/**/dist/*",
+        "dist/*",
         "*-test.ts",
         "*-test.tsx"
     ],
