--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -5,6 +5,7 @@ on: workflow_dispatch
 jobs:
   release:
     runs-on: ${{ matrix.os }}
+    continue-on-error: true
     env:
       SNAPCRAFT_STORE_CREDENTIALS: ${{ secrets.SNAPCRAFT_TOKEN }}
     strategy:
