--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@electron/remote": "^2.0.9",
     "adm-zip": "^0.5.1",
     "cross-env": "^7.0.3",
+    "electron-log": "^5.0.1",
     "electron-updater": "^4.6.5",
     "fs-extra": "^9.1.0",
     "got": "^11.8.3",
