--- a/src/render/tsconfig.json
+++ b/src/render/tsconfig.json
@@ -22,6 +22,7 @@
         "lib": [
             "DOM", "DOM.Iterable", "ES2019"
         ],
+        "typeRoots": ["types"],
         "paths": {
             "Libs/*": ["Libs/*"],
             "Util/*": ["Util/*"],
