--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@prefresh/webpack": "^4.0.0",
     "@svgr/webpack": "^6.2.1",
     "@tjmcraft/greentree": "^0.0.67",
+    "@types/node": "^20.10.7",
     "@types/webpack-env": "^1.18.1",
     "@typescript-eslint/parser": "^6.18.0",
     "babel-loader": "^8.2.2",
