--- a/src/render/tsconfig.json
+++ b/src/render/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "outDir": "./dist",
-        "target": "ES6",
+        "target": "ESNext",
         "module": "CommonJS",
         "sourceMap": true,
         "noImplicitAny": false,
@@ -20,9 +20,8 @@
         "noUnusedParameters": false,
         "allowJs": true,
         "lib": [
-            "DOM", "DOM.Iterable", "ES2019"
+            "DOM", "DOM.Iterable", "ES2019",
         ],
-        "typeRoots": ["types"],
         "paths": {
             "Libs/*": ["Libs/*"],
             "Util/*": ["Util/*"],
