--- a/package.json
+++ b/package.json
@@ -161,9 +161,10 @@
       "target": [
         {
           "target": "nsis",
-          "arch": "x64"
+          "arch": ["x64", "ia32"]
         }
       ],
+      "publisherName": ["MakAndJo"],
       "icon": "icons/icon.ico"
     },
     "linux": {
