--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
-    "platform": "^1.3.6",
+    "platform": "^1.3.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.7",
