--- a/package.json
+++ b/package.json
@@ -38,23 +38,24 @@
   },
   "dependencies": {
     "@electron/remote": "^2.0.9",
+    "@tjmc/window-state": "^1.0.0",
     "adm-zip": "^0.5.1",
-    "cross-env": "^7.0.3",
-    "electron-log": "^5.0.1",
-    "electron-updater": "^4.6.5",
-    "fs-extra": "^9.1.0",
-    "got": "^11.8.3",
-    "keytar": "^7.9.0",
-    "md5": "^2.3.0",
-    "ws": "^7.5.1",
     "body-parser": "^1.20.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "electron-log": "^5.0.1",
+    "electron-updater": "^4.6.5",
     "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
+    "fs-extra": "^9.1.0",
+    "got": "^11.8.3",
+    "keytar": "^7.9.0",
+    "md5": "^2.3.0",
     "mysql2": "^2.3.3",
-    "platform": "^1.3.6"
+    "platform": "^1.3.6",
+    "ws": "^7.5.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.7",
