--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "html-webpack-plugin": "^5.3.2",
     "jest": "^29.4.1",
     "mini-css-extract-plugin": "^2.3.0",
-    "preact": "^10.19.2",
+    "preact": "10.19.2",
     "react": "npm:@preact/compat",
     "react-dom": "npm:@preact/compat",
     "react-markdown": "^8.0.5",
