--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
     "keytar": "^7.9.0",
     "md5": "^2.3.0",
     "mysql2": "^2.3.3",
+    "nbt": "^0.8.1",
     "platform": "^1.3.6",
+    "prismarine-nbt": "^2.5.0",
     "ws": "^7.5.1"
   },
   "devDependencies": {
