--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@electron/remote": "^2.0.9",
     "@tjmc/config": "^1.0.6",
     "@tjmc/window-state": "^1.0.0",
+    "@xmcl/nbt": "^3.0.2",
     "adm-zip": "^0.5.1",
     "body-parser": "^1.20.0",
     "compression": "^1.7.4",
